fix(root): fixes overflow issues on small device size
fixes overflow issues with some code examples on small device sizes

--- a/src/components/AttributeCards/index.css
+++ b/src/components/AttributeCards/index.css
@@ -20,7 +20,7 @@
   border-bottom: none;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 992px) {
   .attribute-cards {
     display: block;
   }
